<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_navigation_view">
    <group
        android:id="@+id/menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_grid"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/grid" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/list" />
    </group>
    <group android:id="@+id/settings">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/Setting" />
    </group>
</menu>
